프로젝트 명 변경

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cit_project_b</name>
+	<name>scit_project_b</name>
 	<comment></comment>
 	<projects>
 	</projects>
