--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
 			<artifactId>javax.servlet.jsp-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		<!-- jstl -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
@@ -137,7 +138,7 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
-		<!-- 파일 업/다운을 위한 dependency 추가 -->
+		<!-- 파일 업/다운을 위한 dependency 추가 시작 -->
 
 		<!-- commons-io -->
 		<dependency>
@@ -153,6 +154,8 @@
 			<version>1.3.2</version>
 		</dependency>
 
+		<!-- 파일 업/다운을 위한 dependency 추가 끝 -->
+
 		<!-- JSON -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -167,27 +170,37 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- naver -->
 		<dependency>
 			<groupId>com.github.scribejava</groupId>
 			<artifactId>scribejava-core</artifactId>
 			<version>2.8.1</version>
 		</dependency>
-		
+
 		<!-- 제이슨 파싱 -->
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-		
-		<!-- jstl -->
+
+		<!-- 메일 인증 시작 -->
+
+		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
+		<!-- 메일 인증 끝 -->
 
 	</dependencies>
 	<build>
